# IRCrc02

./: CMakeLists.txt
Classes/: AppDelegate.cpp  AppDelegate.h  IncludeAndroid.h
Classes/Ads/: AdsAnimation.cpp  AdsAnimation.h  AdsZonePanel.cpp  AdsZonePanel.h
Classes/CustomClass/: AlertView.cpp  AlertView.h  ApplicationWrapper-android.cpp  ApplicationWrapper-apple.mm  ApplicationWrapper.cpp  ApplicationWrapper.h  ClickerCalculation.cpp  ClickerCalculation.h  Config.cpp  Config.h  CustomMath.cpp  CustomMath.h  LoadingLayer.cpp  LoadingLayer.h  MUSKScoreBar.cpp  MUSKScoreBar.h  ResourceConfig.h  ScrollableButton.cpp  ScrollableButton.h  SpineObject.cpp  SpineObject.h  TagManager.cpp  TagManager.h
Classes/DBClasses/: DBAttributesInfo.cpp  DBAttributesInfo.h  DBLevels.cpp  DBLevels.h  DBMyScreen.cpp  DBMyScreen.h  DBResourceInfo.cpp  DBResourceInfo.h  DBScreenInfo.cpp  DBScreenInfo.h  DBUserInfo.cpp  DBUserInfo.h  Resources.cpp  Resources.h
Classes/DataStructure/: ScreenData.cpp  ScreenData.h
Classes/Framework/Ads/: VideoAdsManager.cpp  VideoAdsManager.h
Classes/Framework/Ads/AdMob/: AdMobController.cpp  AdMobController.h
Classes/Framework/Ads/FBAudienceNetwork/: FBAN-android.cpp  FBAN-apple.mm  FBAN.cpp  FBAN.h  FBANManager.cpp  FBANManager.h
Classes/Framework/Firebase/: MUSKFirebase-android.cpp  MUSKFirebase-apple.mm  MUSKFirebase.cpp  MUSKFirebase.h  MUSKFirebaseManager.cpp  MUSKFirebaseManager.h
Classes/Framework/InAppPurchase/: InAppController.cpp  InAppController.h  InAppUnit.cpp  InAppUnit.h  SubscriptionUnitManager.cpp  SubscriptionUnitManager.h
Classes/Framework/InAppPurchase/InappPurchaseWrapper/: InApp-android.cpp  InApp-apple.mm  InApp.cpp  InApp.h  InAppManager.cpp  InAppManager.h
Classes/GameLayer/: Chair.cpp  Chair.h  GameHud.cpp  GameHud.h  GameNode.cpp  GameNode.h  Human.cpp  Human.h  HumanExit.cpp  HumanExit.h  Ornaments.cpp  Ornaments.h  Station.cpp  Station.h  Waiter.cpp  Waiter.h
Classes/StoreLayer/: GateAttributes.cpp  GateAttributes.h  LevelUpPanel.cpp  LevelUpPanel.h  OfflineEarning.cpp  OfflineEarning.h  OrnamentsPanel.cpp  OrnamentsPanel.h  SettingsPanel.cpp  SettingsPanel.h  StorePanel.cpp  StorePanel.h  ThemePanel.cpp  ThemePanel.h
Resources/: database.sqlite
Resources/Images/Ads/: adcoin.atlas  adcoin.json
Resources/Images/Human/: 1001a.atlas  1001a.json  1001b.atlas  1001b.json  1001c.atlas  1001c.json  1001d.atlas  1001d.json  1002a.atlas  1002a.json  1002b.atlas  1002b.json  1002c.atlas  1002c.json  1002d.atlas  1002d.json  1003a.atlas  1003a.json  1003b.atlas  1003b.json  1003c.atlas  1003c.json  1003d.atlas  1003d.json  1004a.atlas  1004a.json  1004b.atlas  1004b.json  1004c.atlas  1004c.json  1004d.atlas  1004d.json  1005a.atlas  1005a.json  1005b.atlas  1005b.json  1005c.atlas  1005c.json  1005d.atlas  1005d.json  (+88 more)
Resources/Images/Ornaments/: 301a.atlas  301a.json  301b.atlas  301b.json  301c.atlas  301c.json  302a.atlas  302a.json  302b.atlas  302b.json  302c.atlas  302c.json
Resources/Images/Waiter/: 5001a.atlas  5001a.json  5001b.atlas  5001b.json  5002a.atlas  5002a.json  5002b.atlas  5002b.json
cocos2d/cocos/editor-support/spine/: SkeletonAnimation.cpp  SkeletonAnimation.h  SkeletonData.c  SkeletonData.h
proj.android/: build.gradle  gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle  google-services.json  gradle.properties
proj.android/app/Projects/IRC/: KeyStore_info.rtf  irc.jks  private_key.pepk
proj.android/app/jni/: Android.mk  Application.mk
proj.android/app/res/layout/: notification.xml
proj.android/app/res/values/: strings.xml
proj.android/app/res/xml/: global_tracker.xml  remote_config.xml
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java  ApplicationManager.java  FBAudienceNetworkManager.java  FirebaseManager.java  FirebaseMessagingService.java  InAppPurchase.java  MUSKGoogleAnalytics.java
proj.android/app/src/org/cocos2dx/lib/: Cocos2dxDeviceHelper.java
proj.ios_mac/IRC.xcodeproj/: project.pbxproj
proj.ios_mac/IRC.xcodeproj/project.xcworkspace/xcuserdata/tareksaazeb.xcuserdatad/: UserInterfaceState.xcuserstate
proj.ios_mac/IRC.xcodeproj/xcshareddata/xcschemes/: IRC-mobile.xcscheme
proj.ios_mac/IRC.xcodeproj/xcuserdata/tareksaazeb.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
proj.ios_mac/IRC.xcodeproj/xcuserdata/tareksaazeb.xcuserdatad/xcschemes/: xcschememanagement.plist
proj.ios_mac/ios/: GoogleService-Info.plist  Info.plist  RemoteConfigDefaults.plist
proj.ios_mac/ios/Framework/FBAudience/FBSDKCoreKit.framework/: FBSDKCoreKit
proj.ios_mac/ios/FrameworkClasses/FBAudience/: FBAudienceManager.h  FBAudienceManager.mm
proj.ios_mac/ios/FrameworkClasses/FirebaseIOS/: FirebaseManager.h  FirebaseManager.mm
proj.ios_mac/ios/FrameworkClasses/GoogleAnalytics/: GoogleAnalyticsManager.h  GoogleAnalyticsManager.mm
proj.ios_mac/mac/: Info.plist
proj.win32/: IRC.sln
